--- a/Index.html
+++ b/Index.html
@@ -89,7 +89,7 @@
         <i class="fa-regular fa-envelope"></i>  <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
         <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
         <i class="fa-solid fa-phone"></i> 012 3456789<br>
-        <i class="fa-brands fa-linkedin"></i>  <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
+        <i class="fa-brands fa-linkedin"></i>  <a href="https://www.linkedin.com/in/erica-reibaldi-2683b6271/" target="_blank">Erica Reibaldi</a>
       </p>
     </div>
 
