--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Header section with navigation links -->
   <header>
-    <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg" alt="Logo Erica Reibaldi">
+    <img id="logo" src="Logo.png" alt="Logo Erica Reibaldi">
     <div class="burger-menu" id="burger-menu">
       &#9776;
   </div>
