--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Header section with navigation links -->
   <header>
-    <img id="logo" src="Logo.png" alt="Logo Erica Reibaldi">
+    <img id="logo" src="logo2.png" alt="Logo Erica Reibaldi">
     <div class="burger-menu" id="burger-menu">
       &#9776;
   </div>
