--- a/Index.html
+++ b/Index.html
@@ -120,10 +120,10 @@
 <pre>
   <div id="form">
     <form action="/action.php" target=”_blank”>
-    <input type="text" id="fname" name="fname" value="Nome"><br>
-    <input type="text" id="fname" name="fname" value="Cognome"><br>
-    <input type="text" id="fname" name="fname" value="E-mail"><br>
-    <input type="text" id="fname" name="fname" value="Messaggio"><br>
+    <input type="text" id="fname" name="fname" placeholder="Nome"><br>
+    <input type="text" id="fname" name="fname" placeholder="Cognome"><br>
+    <input type="text" id="fname" name="fname" placeholder="E-mail"><br>
+    <textarea id="message" name="message" placeholder="Messaggio"></textarea><br>
     <input type="submit" id="submit" value="Invia">
     </form>
  </div>
