--- a/Index.html
+++ b/Index.html
@@ -17,16 +17,15 @@
   </div>
   <nav id="menu" class="nav-links">
       <a href="#chisono">Chi sono</a>
-      <a href="#Progetti">Progetti</a>
-      <a href="#dovetrovarmi">Dove trovarmi</a>
+      <a href="#progetti">Progetti</a>
       <a href="#contatti">Contatti</a>
+      <a href="#dovetrovarmi">Dove trovarmi</a>
   </nav>
 </header>
 
 <script src="script.js"></script>
 
-  <div class="chisono">
-    <!-- Section "Chi sono" -->
+  <div class="chisono" id="chisono">
     <div> 
       <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono">
     </div> 
@@ -66,7 +65,7 @@
 </script>
 
 <!-- Section "Progetti" -->
-<div class="progetti">
+<div class="progetti" id="progetti">
   <h2>Progetti</h2>
   <p>Ecco i miei progetti più recenti.</p>
 
@@ -104,7 +103,7 @@
     
 
   <!-- Footer with contact information -->
-  <div class="info">
+  <div class="info" id="contatti">
     <div>
       <h2>Contatti</h2>
       <p>
