--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
 
 <div id="popup" style="display: none;">
     <!-- X di chiusura -->
-    <span style="float: right; cursor: pointer;" onclick="popup()">X</span>
+    <span style=" cursor: pointer;" onclick="popup()">X</span>
     <h1>SEGUIMI</h1>
     <p>Visita il mio profilo Instagram per rimanere sempre aggiornato!</p>
     <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a>
@@ -127,7 +127,6 @@
  </div>
 </pre>  
 </div>
-
 
 
 <div id="dovetrovarmi">
