--- a/Index.html
+++ b/Index.html
@@ -74,11 +74,11 @@
 <div class="container">
       <div id="testo1">
         <h2>Editoriale Eden</h2>
-        <p>Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia.
+        <p>In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia.
           Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.
           L’invito è alla riflessione sul valore reale degli oggetti e sulla soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile.</p>
       </div>
-      <img >
+
       <div class="slideshow-container">
 
         <div class="mySlides fade">
@@ -186,6 +186,7 @@
       <a href="#">Privacy Policy</a>
     </p>
   </footer>
-  
+
+
 </body>
 </html>
