--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,11 @@
           L’invito è alla riflessione sul valore reale degli oggetti e sulla soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile.</p>
       </div>
 
-      <div class="slideshow-container">
+      <div class="slider1">
+      
+        <div class="contenitore-foto slider-container">
+      
+          <div class="slideshow-container">
 
         <div class="mySlides fade">
           <img src="2.jpg" alt="foto1" class="slider-img" id="foto1">
@@ -115,13 +119,19 @@
           <span class="dot" onclick="currentSlide(4)"></span> 
           <span class="dot" onclick="currentSlide(5)"></span> 
         </div>
+
+        </div>
+      </div>
     </div>
 
 <div class="container">
-    <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
+  <div id="slider2">
+  <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
+  </div>
+
     <div id="testo2"> 
-    <h2> Duality</h2>
-    <p> "Il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
+      <h2> Duality</h2>
+      <p> "Il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
      ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </p> 
     </div> 
   
