--- a/Index.html
+++ b/Index.html
@@ -126,13 +126,16 @@
 
 <div class="container">
   <div id="slider2">
-  <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
+  <img id="foto2" src="Kaleidos-MOODBOARD.jpg" alt="Kaleidos">
   </div>
 
     <div id="testo2"> 
-      <h2> Duality</h2>
-      <p> "Il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
-     ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </p> 
+      <h2> Kaleidos </h2>
+      <p> Questa capsule collection si ispira a Rick Owens e al suo stile anticonformista con la volontà di rielaborare il linguaggio visivo del brand per valorizzarne la portabilità.
+
+        Attraverso un processo di semplificazione, che prende spunto dal linguaggio dell’architettura brutalista, i capi della capsule formeranno outfit portabili nel quotidiano ma con un tocco di individualità per omaggiare l’essenza di ognuno di noi; per questo, plissettature e pieghe ricordano membrane iridescenti di creature sottomarine aggiungendo leggerezza e dinamismo ai tessuti, creando un particolare contrasto con la solidità e la struttura dei tagli brutalisti, e quindi con l’identità del brand.
+        
+        Questa capsule dunque incarna l'incontro tra l'audacia di Rick Owens e l'essenzialità del brutalismo, offrendo una nuova interpretazione della moda contemporanea che sfida le convenzioni e celebra la bellezza nella sua forma più pura. </p> 
     </div> 
   
   </div>
