--- a/Index.html
+++ b/Index.html
@@ -151,9 +151,8 @@
 </div>
     
 
-  <!-- Footer with contact information -->
-  <div class="info" id="contatti">
-    <div>
+<div class="info">
+    <div id="contatti">
       <h2>Contatti</h2>
       <p>
         <i class="fa-regular fa-envelope"></i>  <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
@@ -163,18 +162,18 @@
       </p>
     </div>
 
-<!-- Contact form -->
-<pre>
-  <div id="form">
-    <form action="/action.php" target=”_blank”>
-    <input type="text" id="fname" name="fname" placeholder="Nome"><br>
-    <input type="text" id="fname" name="fname" placeholder="Cognome"><br>
-    <input type="text" id="fname" name="fname" placeholder="E-mail"><br>
-    <textarea id="message" name="message" placeholder="Messaggio"></textarea><br>
-    <input type="submit" id="submit" value="Invia">
-    </form>
- </div>
-</pre>  
+  <!-- Contact form -->
+  <pre>
+    <div id="form">
+      <form action="/action.php" target=”_blank”>
+      <input type="text" id="fname" name="fname" placeholder="Nome"><br>
+      <input type="text" id="fname" name="fname" placeholder="Cognome"><br>
+      <input type="text" id="fname" name="fname" placeholder="E-mail"><br>
+      <textarea id="message" name="message" placeholder="Messaggio"></textarea><br>
+      <input type="submit" id="submit" value="Invia">
+      </form>
+    </div>  
+  </pre>  
 </div>
 
 
