--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
   <p>Ecco i miei progetti più recenti.</p>
 
  
-  
+<div class="bigcontainer">
 <div class="container">
       <div id="testo1">
         <h2>Editoriale Eden</h2>
@@ -188,7 +188,7 @@
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
-  </div>
+</div>
 
   <!-- Footer with copyright information -->
   <footer class="myfooter">
