--- a/Index.html
+++ b/Index.html
@@ -179,7 +179,7 @@
 <div class="container">
   <div id="Tarocchi">
     <id id="testo1"> 
-      <h2>Tarocchi</h2>
+      <h2>Guo Pei's Tarots</h2>
       <p>Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</p></id></br>
   </div>
       
