--- a/Index.html
+++ b/Index.html
@@ -239,8 +239,11 @@
       <h2>Contatti</h2>
       <p>
         <i class="fa-regular fa-envelope"></i>  <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
+      </br>
         <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
+      </br>
         <i class="fa-solid fa-phone"></i> 012 3456789<br>
+      </br>
         <i class="fa-brands fa-linkedin"></i>  <a href="https://www.linkedin.com/in/erica-reibaldi-2683b6271/" target="_blank">Erica Reibaldi</a>
       </p>
     </div>
@@ -248,6 +251,7 @@
   <!-- Contact form -->
   <pre>
     <div id="form">
+      <p>Lascia il tuo messaggio per essere contattato</p>
       <form action="/action.php" target=”_blank”>
       <input type="text" id="fname" name="fname" placeholder="Nome"><br>
       <input type="text" id="fname" name="fname" placeholder="Cognome"><br>
