--- a/Index.html
+++ b/Index.html
@@ -66,8 +66,8 @@
 
 <!-- Section "Progetti" -->
 <div class="progetti" id="progetti">
-  <h2>Progetti</h2>
-  <p>Ecco i miei progetti più recenti.</p>
+  <h2>I miei progetti più recenti</h2>
+  
 
  
 <div class="bigcontainer">
