--- a/Index.html
+++ b/Index.html
@@ -38,11 +38,9 @@
         delle storie attraverso la mia visione della moda. </br> </br>Scoprite il mio portfolio online, una vetrina virtuale dei miei 
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
         i miei progetti. </br> Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
-      </p> 
-    </div>
-  </div>  
-
-  <span class="button" onclick="popup()">Clicca Qui</span>
+      </p>
+<br>
+        <span class="button" onclick="popup()">Scopri di più</span>
 
 <div id="popup" style="display: none;">
     <!-- X di chiusura -->
@@ -63,6 +61,10 @@
         }
     }
 </script>
+    </div>
+  </div>  
+
+
 
 <!-- Section "Progetti" -->
 <div class="progetti" id="progetti">
