--- a/Index.html
+++ b/Index.html
@@ -281,11 +281,11 @@
 
   <!-- Footer with copyright information -->
   <footer class="myfooter">
-    <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
     <p>
-      <a href="mailto:info@miosito.com">Contatti</a> | 
-      <a href="#">Privacy Policy</a>
+      <a href="mailto:info@miosito.com">Contatti</a> 
     </p>
+    <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
+  
   </footer>
 
 
