--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
 
 <div id="popup" style="display: none;">
     <!-- X di chiusura -->
-    <span style=" cursor: pointer;" onclick="popup()">X</span>
+    <span class="close-button" style=" cursor: pointer;" onclick="popup()">X</span>
     <h1>SEGUIMI</h1>
     <p>Visita il mio profilo Instagram per rimanere sempre aggiornato!</p>
     <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a>
